--- a/DraftIDF/Base.lproj/Main.storyboard
+++ b/DraftIDF/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TDp-0S-nhW" id="7N2-0n-HIl">
-                                            <rect key="frame" x="0.0" y="0.0" width="342" height="99.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="center" distribution="fillProportionally" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Z6X-uQ-ztl">
@@ -124,7 +124,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TnU-NG-ocv" id="fPY-Rg-lDr">
-                                            <rect key="frame" x="0.0" y="0.0" width="342" height="99.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="center" distribution="fillProportionally" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="eAV-1a-Bts">
@@ -444,11 +444,11 @@
             </objects>
             <point key="canvasLocation" x="4696" y="1529"/>
         </scene>
-        <!--Info-->
+        <!--Draft-->
         <scene sceneID="nPG-ak-jCi">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="w8r-SR-ZxL" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Info" image="ic_language" id="P7M-lp-VOi"/>
+                    <tabBarItem key="tabBarItem" title="Draft" image="ic_language" id="P7M-lp-VOi"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="WaB-Ch-c91">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
