--- a/DraftIDF/Base.lproj/Main.storyboard
+++ b/DraftIDF/Base.lproj/Main.storyboard
@@ -489,8 +489,8 @@
                         <segue destination="eQj-Oa-odp" kind="relationship" relationship="viewControllers" id="tGN-M1-kVT"/>
                         <segue destination="3LA-U5-UG4" kind="relationship" relationship="viewControllers" id="iqi-xm-n5l"/>
                         <segue destination="5jz-XV-kMe" kind="relationship" relationship="viewControllers" id="3bG-ue-CFn"/>
-                        <segue destination="w8r-SR-ZxL" kind="relationship" relationship="viewControllers" id="1WC-DY-qKd"/>
                         <segue destination="sdo-1p-CDe" kind="relationship" relationship="viewControllers" id="Fyc-AJ-6dL"/>
+                        <segue destination="w8r-SR-ZxL" kind="relationship" relationship="viewControllers" id="1WC-DY-qKd"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uuJ-dJ-gDy" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -694,7 +694,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" white="0.33333333329999998" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationLevel="1" indentationWidth="10" reuseIdentifier="RanksTableViewCell" rowHeight="100" id="rRh-un-gdu" customClass="NonCombatTableViewCell" customModule="DraftIDF" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationLevel="1" indentationWidth="10" reuseIdentifier="RanksTableViewCell" rowHeight="100" id="rRh-un-gdu" customClass="RanksTableViewCell" customModule="DraftIDF" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rRh-un-gdu" id="HO7-cl-Zbv">
@@ -743,9 +743,9 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="desc" destination="N7E-zT-HfT" id="ud3-wg-YjC"/>
-                                            <outlet property="img" destination="MKA-di-wet" id="LQF-2c-EJb"/>
-                                            <outlet property="title" destination="cC3-zw-L6L" id="Qk1-Xh-dmF"/>
+                                            <outlet property="desc" destination="N7E-zT-HfT" id="Z9l-eb-bNC"/>
+                                            <outlet property="img" destination="MKA-di-wet" id="nqd-9n-uJQ"/>
+                                            <outlet property="title" destination="cC3-zw-L6L" id="Gwa-ie-ewh"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -761,7 +761,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Ranks" id="EZ6-g5-67g"/>
                     <connections>
-                        <outlet property="tblview" destination="zFo-2O-dm7" id="TT7-XN-NuW"/>
+                        <outlet property="tblview" destination="zFo-2O-dm7" id="GgW-c1-h3y"/>
                         <segue destination="DUD-vH-6FR" kind="show" identifier="RanksMastertoDetail" id="GHy-O6-0AO">
                             <nil key="action"/>
                         </segue>
@@ -773,8 +773,8 @@
         <!--Ranks-->
         <scene sceneID="2E8-Nf-ct8">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sdo-1p-CDe" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Ranks" image="ic_accessibility" id="WeS-3K-82r"/>
+                <navigationController title="Ranks" automaticallyAdjustsScrollViewInsets="NO" id="sdo-1p-CDe" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Ranks" image="ic_info_outline" id="WeS-3K-82r"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="x4I-uk-MDJ">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -855,6 +855,7 @@
         <image name="bardelas" width="120" height="162"/>
         <image name="hachinuch" width="120" height="162"/>
         <image name="ic_accessibility" width="24" height="24"/>
+        <image name="ic_info_outline" width="24" height="24"/>
         <image name="ic_language" width="24" height="24"/>
         <image name="ic_laptop_mac" width="24" height="24"/>
         <image name="ic_security" width="24" height="24"/>
